fixed alignment

--- a/src/Hero/sections/sections.scss
+++ b/src/Hero/sections/sections.scss
@@ -181,15 +181,20 @@ section{
     .section1{
         padding: 10px 10px 50px 10px;
         min-height: max-content;
-    
+
         .section1-wrapper{
             margin: 0px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
         }
     
         h1{
             font-size: 36px;
             font-weight: 700;
             line-height: 3rem;
+            margin: 0 auto;
             // text-align: center;
             // font-stretch: 100px;
             
