--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -11,8 +11,11 @@
 
 
 @media screen and (max-width: 800px) {
-    nav{
-        width: 100%;
-        padding: 16px 0px 15px 0px;
+    .header-container {
+        nav{
+            width: 100%;
+            padding: 16px 0px 15px 0px;
+            
+        }
     }
 }
